k8s/base/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: SAMEORIGIN";
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pihole.mydomain.tld
      secretName: pihole-tls
  rules:
  - host: "pihole.mydomain.tld"
    http:
      paths:
      - pathType: Prefix
        path:  /
        backend:
          service:
            name: pihole-web
            port:
              number: 8000
